[gd_scene load_steps=7 format=3 uid="uid://ccgjssadsykiy"]

[ext_resource type="Script" path="res://things/cube.gd" id="1_talj7"]
[ext_resource type="FontFile" uid="uid://ck5dgaslygqp3" path="res://things/VT323-Regular.ttf" id="2_4tu4y"]
[ext_resource type="Texture2D" uid="uid://dscec4wxigo04" path="res://things/white-square.png" id="3_2dnhe"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_4aivi"]
friction = 0.5
bounce = 0.49

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xcpp7"]
size = Vector2(40, 40)

[sub_resource type="Theme" id="Theme_05hd1"]
default_font = ExtResource("2_4tu4y")
default_font_size = 256

[node name="Cube" type="RigidBody2D"]
input_pickable = true
physics_material_override = SubResource("PhysicsMaterial_4aivi")
max_contacts_reported = 8
contact_monitor = true
script = ExtResource("1_talj7")

[node name="Color" type="ColorRect" parent="."]
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
mouse_filter = 2

[node name="Border" type="ColorRect" parent="Color"]
offset_right = 2.0
offset_bottom = 40.0
mouse_filter = 2
color = Color(0.321569, 0.321569, 0.321569, 1)

[node name="Border2" type="ColorRect" parent="Color"]
offset_left = 38.0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
color = Color(0.321569, 0.321569, 0.321569, 1)

[node name="Border3" type="ColorRect" parent="Color"]
offset_top = 2.0
offset_right = 2.0
offset_bottom = 42.0
rotation = -1.57079
mouse_filter = 2
color = Color(0.321569, 0.321569, 0.321569, 1)

[node name="Border4" type="ColorRect" parent="Color"]
offset_left = 40.0
offset_top = 38.0
offset_right = 42.0
offset_bottom = 78.0
rotation = 1.57079
mouse_filter = 2
color = Color(0.321569, 0.321569, 0.321569, 1)

[node name="Shape" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_xcpp7")

[node name="Explosion" type="CPUParticles2D" parent="."]
position = Vector2(-20, -20)
scale = Vector2(2.5, 2.5)
emitting = false
amount = 69
lifetime = 2.0
one_shot = true
explosiveness = 1.0
emission_shape = 4
emission_points = PackedVector2Array(0, 0, 0, 1, 0, 2, 0, 3, 0, 4, 0, 5, 0, 6, 0, 7, 0, 8, 0, 9, 0, 10, 0, 11, 0, 12, 0, 13, 0, 14, 0, 15, 1, 0, 1, 1, 1, 2, 1, 3, 1, 4, 1, 5, 1, 6, 1, 7, 1, 8, 1, 9, 1, 10, 1, 11, 1, 12, 1, 13, 1, 14, 1, 15, 2, 0, 2, 1, 2, 2, 2, 3, 2, 4, 2, 5, 2, 6, 2, 7, 2, 8, 2, 9, 2, 10, 2, 11, 2, 12, 2, 13, 2, 14, 2, 15, 3, 0, 3, 1, 3, 2, 3, 3, 3, 4, 3, 5, 3, 6, 3, 7, 3, 8, 3, 9, 3, 10, 3, 11, 3, 12, 3, 13, 3, 14, 3, 15, 4, 0, 4, 1, 4, 2, 4, 3, 4, 4, 4, 5, 4, 6, 4, 7, 4, 8, 4, 9, 4, 10, 4, 11, 4, 12, 4, 13, 4, 14, 4, 15, 5, 0, 5, 1, 5, 2, 5, 3, 5, 4, 5, 5, 5, 6, 5, 7, 5, 8, 5, 9, 5, 10, 5, 11, 5, 12, 5, 13, 5, 14, 5, 15, 6, 0, 6, 1, 6, 2, 6, 3, 6, 4, 6, 5, 6, 6, 6, 7, 6, 8, 6, 9, 6, 10, 6, 11, 6, 12, 6, 13, 6, 14, 6, 15, 7, 0, 7, 1, 7, 2, 7, 3, 7, 4, 7, 5, 7, 6, 7, 7, 7, 8, 7, 9, 7, 10, 7, 11, 7, 12, 7, 13, 7, 14, 7, 15, 8, 0, 8, 1, 8, 2, 8, 3, 8, 4, 8, 5, 8, 6, 8, 7, 8, 8, 8, 9, 8, 10, 8, 11, 8, 12, 8, 13, 8, 14, 8, 15, 9, 0, 9, 1, 9, 2, 9, 3, 9, 4, 9, 5, 9, 6, 9, 7, 9, 8, 9, 9, 9, 10, 9, 11, 9, 12, 9, 13, 9, 14, 9, 15, 10, 0, 10, 1, 10, 2, 10, 3, 10, 4, 10, 5, 10, 6, 10, 7, 10, 8, 10, 9, 10, 10, 10, 11, 10, 12, 10, 13, 10, 14, 10, 15, 11, 0, 11, 1, 11, 2, 11, 3, 11, 4, 11, 5, 11, 6, 11, 7, 11, 8, 11, 9, 11, 10, 11, 11, 11, 12, 11, 13, 11, 14, 11, 15, 12, 0, 12, 1, 12, 2, 12, 3, 12, 4, 12, 5, 12, 6, 12, 7, 12, 8, 12, 9, 12, 10, 12, 11, 12, 12, 12, 13, 12, 14, 12, 15, 13, 0, 13, 1, 13, 2, 13, 3, 13, 4, 13, 5, 13, 6, 13, 7, 13, 8, 13, 9, 13, 10, 13, 11, 13, 12, 13, 13, 13, 14, 13, 15, 14, 0, 14, 1, 14, 2, 14, 3, 14, 4, 14, 5, 14, 6, 14, 7, 14, 8, 14, 9, 14, 10, 14, 11, 14, 12, 14, 13, 14, 14, 14, 15, 15, 0, 15, 1, 15, 2, 15, 3, 15, 4, 15, 5, 15, 6, 15, 7, 15, 8, 15, 9, 15, 10, 15, 11, 15, 12, 15, 13, 15, 14, 15, 15)
emission_colors = PackedColorArray()
direction = Vector2(0, -1)
spread = 180.0
initial_velocity_min = 100.0
initial_velocity_max = 300.0
angular_velocity_min = -50.0
angular_velocity_max = 50.0
damping_min = 20.0
damping_max = 50.0
scale_amount_min = 2.0
scale_amount_max = 20.0

[node name="Weight" type="RichTextLabel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 247.0
offset_bottom = 247.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.15, 0.15)
mouse_filter = 2
theme = SubResource("Theme_05hd1")
bbcode_enabled = true
scroll_active = false

[node name="Light" type="PointLight2D" parent="."]
visible = false
scale = Vector2(2.5, 2.5)
energy = 0.5
texture = ExtResource("3_2dnhe")

[connection signal="body_entered" from="." to="." method="_on_RigidBody2D_body_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
